traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:22: error: reassignment to val
    cpt=cpt+1
       ^